--- a/hamstermonitor.html
+++ b/hamstermonitor.html
@@ -48,6 +48,14 @@
 
 	<hr>
 
-	<div style="display: flex; justify-content: center; font-size: 20px;">$HAMSTER_NAME is</div>
+	<div style="display: flex; justify-content: center; font-size: 20px;">$HAMSTER_NAME is
+	</div>
+
+
 	<div id="$MODULE_ID_active" style="display: flex; justify-content: center; font-size: 30px;">N/A</div>
+
+	<svg viewBox="0 0 360 360" style="width:50%;">
+		<circle cx="180" cy="180" r="50px" fill="var(--color-primary)" stroke="var(--color-primary)"/>
+		<path d="M 40,20 A30,30 0 1,0 70,70" fill="transparent" stroke="var(--color-font-med)"/>
+	</svg>
 </div>
