--- a/hamstermonitor.html
+++ b/hamstermonitor.html
@@ -59,8 +59,8 @@
 
 	<hr>
 
-	<div style="display: grid; grid-template-columns: 50% 50%">
-		<div>
+	<div style="display: grid; grid-template-columns: 50% 50%; grid-template-rows: 150px;">
+		<div style="height: 150px;">
 			<svg id="$MODULE_ID_activesvg" viewBox="-40 -40 360 260" style="width:100%; display: block;">
 				<path d="M 75 130 Q -10 130 40 30 M 75 130 Q 160 130 110 30 Q 75 0 40 30" fill="transparent" stroke="var(--color-primary)" stroke-width="20px" 
 					stroke-linejoin="round" stroke-linecap="round"/>
