Fixed sizing issue

--- a/hamstermonitor.html
+++ b/hamstermonitor.html
@@ -78,7 +78,7 @@
 					stroke-linejoin="round" stroke-linecap="round"/>
 			</svg>
 
-			<svg id="$MODULE_ID_hidingsvg" viewBox="0 40 360 260" style="width:100%; z-index: 5;">
+			<svg id="$MODULE_ID_hidingsvg" viewBox="0 40 360 260" style="height: 100%; z-index: 5;">
 				<path d="M 40 280 Q 180 -80 320 280 h -80 Q 180 120 120 280 h -80 h 200" fill="transparent" stroke="var(--color-font-med)" stroke-width="20px" 
 					stroke-linejoin="round" stroke-linecap="round"/>
 			</svg>
