Fixed sizing issue

--- a/hamstermonitor.html
+++ b/hamstermonitor.html
@@ -60,8 +60,8 @@
 	<hr>
 
 	<div style="display: grid; grid-template-columns: 50% 50%; grid-template-rows: 150px;">
-		<div style="height: 150px;">
-			<svg id="$MODULE_ID_activesvg" viewBox="-40 -40 360 260" style="width:100%; display: block;">
+		<div style="height: 150px; display: flex; justify-content: center;">
+			<svg id="$MODULE_ID_activesvg" viewBox="-40 -40 360 260" style="height:100%; display: block;">
 				<path d="M 75 130 Q -10 130 40 30 M 75 130 Q 160 130 110 30 Q 75 0 40 30" fill="transparent" stroke="var(--color-primary)" stroke-width="20px" 
 					stroke-linejoin="round" stroke-linecap="round"/>
 				<circle cx="30" cy="20" r="20px" fill="var(--color-primary)" stroke="var(--color-primary)"/>
