--- a/hamstermonitor.html
+++ b/hamstermonitor.html
@@ -42,7 +42,7 @@
 </script>
 <div id="$MODULE_ID" class="module_card">
 	<div class="module_title">
-		<div>Hamster Monitor</div>
+		<div>$MODULE_TITLE</div>
 		<svg class="module_icon" viewBox="0 0 150 150">
 			<path d="M 75 130 Q -10 130 40 30 M 75 130 Q 160 130 110 30 Q 75 0 40 30" fill="transparent" stroke="var(--color-primary)" stroke-width="20px" 
 				stroke-linejoin="round" stroke-linecap="round"/>
